# template-salvo-solid-tailwind

./: .env  .gitignore  Cargo.toml
db-migrations/: 00000000000000_init.sql
frontend/: index.html  package-lock.json  package.json
frontend/src/: App.tsx  index.tsx
frontend/src/components/: Button.tsx  CheckBox.tsx  InputField.tsx  Navbar.tsx  Sidebar.tsx
frontend/src/views/: Dashboard.tsx  Settings.tsx
src/: database.rs  main.rs  static_assets.rs
