[package]
name = "sst-template"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = "1.0.72"
argon2 = "0.5.1"
base64 = "0.21.2"
blake3 = "1.4.1"
chrono = { version = "0.4.26", features = ["serde"] }
once_cell = { version = "1.18.0", features = ["parking_lot"] }
rand = "0.8.5"
serde = { version = "1.0.171", features = ["derive"] }
serde_json = "1.0.103"
tokio = { version = "1.29.1", features = ["full"] }
tracing = "0.1.37"
tracing-subscriber = "0.3.17"
sqlx = { version = "0.7.1", features = [
    "runtime-tokio",
    "sqlite",
    "chrono",
    "migrate",
] }
mime_guess = "2.0.4"
rust-embed = { version = "6.8.1", features = [
    "mime-guess",
    "salvo",
    "mime_guess",
] }
salvo = { version = "0.46.0", features = [
    "compression",
    "anyhow",
    "session",
    "timeout",
    "cache",
    "caching-headers",
] }

[profile.release]
strip = true
lto = "thin"


[profile.dev.package.sqlx-macros]
opt-level = 3
